General bug fixes for the new system